Fixed horizontal scroll

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -96,7 +96,7 @@ html {
 }
 
 .squares{
-  width:500px;
+  width:370px;
 }
 
 .squares > button{
